--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,7 +8,8 @@
     "contact": "CONTACT",
     "buyNow": "Buy Now",
     "login":"Login",
-    "register":"Register"
+    "register":"Register",
+    "checkout":"CHECKOUT"
   },
   "custom-text": {
     "addCart": "Add to Cart",
@@ -22,13 +23,27 @@
     "pass":"Password",
     "first":"First Name",
     "last":"Last Name",
+    "phone":"Phone",
     "passConfirm":"Confirm password",
     "address":"Street address",
     "city":"City",
     "subject":"Subject",
     "message":"Message",
     "send":"SEND",
-    "contactInfo":"CONTACT INFO"
+    "contactInfo":"CONTACT INFO",
+    "apartment":"Apartment, suite, unit etc. (optional)",
+    "state":"State / Province",
+    "postal":"ZIP / Postal code",
+    "order":"PLACE ORDER",
+    "billingDetails":"Billing Details",
+    "couponT":"Enter your coupon code if you have one",
+    "coupon":"Coupon Code",
+    "apply":"APPLY",
+    "urOrder":"Your order",
+    "product":"Products",
+    "total":"Total",
+    "cartTotal":"Cart Subtotal",
+    "oTotal":"Order Total"
   },
   "blogSection": {
     "text": "LATEST FROM",
